Revert "update fork with elastic"