@@ -19,31 +19,20 @@
 
 package org.elasticsearch.search.query;
 
-import org.apache.lucene.analysis.MockTokenizer;
-import org.apache.lucene.analysis.pattern.PatternReplaceCharFilter;
-import org.apache.lucene.index.IndexReader;
-import org.apache.lucene.search.MultiTermQuery;
 import org.apache.lucene.search.join.ScoreMode;
-import org.apache.lucene.util.AttributeSource;
 import org.apache.lucene.util.English;
 import org.elasticsearch.action.index.IndexRequestBuilder;
 import org.elasticsearch.action.search.SearchPhaseExecutionException;
 import org.elasticsearch.action.search.SearchResponse;
 import org.elasticsearch.action.search.SearchType;
-import org.elasticsearch.action.search.ShardSearchFailure;
 import org.elasticsearch.bootstrap.JavaVersion;
 import org.elasticsearch.common.document.DocumentField;
-import org.elasticsearch.common.regex.Regex;
-import org.elasticsearch.common.lucene.search.SpanBooleanQueryRewriteWithMaxClause;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.time.DateFormatter;
 import org.elasticsearch.common.unit.Fuzziness;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentFactory;
 import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.index.analysis.CharFilterFactory;
-import org.elasticsearch.index.analysis.NormalizingCharFilterFactory;
-import org.elasticsearch.index.analysis.TokenizerFactory;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.MatchQueryBuilder;
 import org.elasticsearch.index.query.MultiMatchQueryBuilder;
@@ -52,14 +41,10 @@ import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.index.query.TermQueryBuilder;
-import org.elasticsearch.index.query.WildcardQueryBuilder;
 import org.elasticsearch.index.query.WrapperQueryBuilder;
 import org.elasticsearch.index.query.functionscore.ScoreFunctionBuilders;
 import org.elasticsearch.index.search.MatchQuery;
-import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.TermsLookup;
-import org.elasticsearch.indices.analysis.AnalysisModule.AnalysisProvider;
-import org.elasticsearch.plugins.AnalysisPlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.search.SearchHit;
@@ -68,25 +53,20 @@ import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.InternalSettingsPlugin;
 import org.elasticsearch.test.junit.annotations.TestIssueLogging;
-import org.hamcrest.Matcher;
 
 import java.io.IOException;
-import java.io.Reader;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Map;
+import java.util.Collections;
 import java.util.Random;
 import java.util.concurrent.ExecutionException;
-import java.util.regex.Pattern;
 
-import static java.util.Collections.singletonMap;
 import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
-import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
+import static org.elasticsearch.cluster.metadata.IndexMetaData.SETTING_NUMBER_OF_SHARDS;
 import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
 import static org.elasticsearch.index.query.QueryBuilders.boolQuery;
 import static org.elasticsearch.index.query.QueryBuilders.constantScoreQuery;
@@ -125,16 +105,14 @@ import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.hasId;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.hasScore;
 import static org.hamcrest.Matchers.closeTo;
 import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.emptyArray;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
 
 public class SearchQueryIT extends ESIntegTestCase {
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(InternalSettingsPlugin.class, MockAnalysisPlugin.class);
+        return Collections.singleton(InternalSettingsPlugin.class);
     }
 
     @Override
@@ -150,9 +128,9 @@ public class SearchQueryIT extends ESIntegTestCase {
     // see #3952
     public void testEmptyQueryString() throws ExecutionException, InterruptedException, IOException {
         createIndex("test");
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("field1", "the quick brown fox jumps"),
-                client().prepareIndex("test").setId("2").setSource("field1", "quick brown"),
-                client().prepareIndex("test").setId("3").setSource("field1", "quick"));
+        indexRandom(true, client().prepareIndex("test", "type1", "1").setSource("field1", "the quick brown fox jumps"),
+                client().prepareIndex("test", "type1", "2").setSource("field1", "quick brown"),
+                client().prepareIndex("test", "type1", "3").setSource("field1", "quick"));
 
         assertHitCount(client().prepareSearch().setQuery(queryStringQuery("quick")).get(), 3L);
         assertHitCount(client().prepareSearch().setQuery(queryStringQuery("")).get(), 0L); // return no docs
@@ -161,9 +139,9 @@ public class SearchQueryIT extends ESIntegTestCase {
     // see https://github.com/elastic/elasticsearch/issues/3177
     public void testIssue3177() {
         createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
-        client().prepareIndex("test").setId("2").setSource("field1", "value2").get();
-        client().prepareIndex("test").setId("3").setSource("field1", "value3").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1").get();
+        client().prepareIndex("test", "type1", "2").setSource("field1", "value2").get();
+        client().prepareIndex("test", "type1", "3").setSource("field1", "value3").get();
         ensureGreen();
         waitForRelocation();
         forceMerge();
@@ -193,10 +171,10 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testIndexOptions() throws Exception {
         assertAcked(prepareCreate("test")
-                .setMapping("field1", "type=text,index_options=docs"));
+                .addMapping("type1", "field1", "type=text,index_options=docs"));
         indexRandom(true,
-                client().prepareIndex("test").setId("1").setSource("field1", "quick brown fox", "field2", "quick brown fox"),
-                client().prepareIndex("test").setId("2").setSource("field1", "quick lazy huge brown fox",
+                client().prepareIndex("test", "type1", "1").setSource("field1", "quick brown fox", "field2", "quick brown fox"),
+                client().prepareIndex("test", "type1", "2").setSource("field1", "quick lazy huge brown fox",
                         "field2", "quick lazy huge brown fox"));
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(matchPhraseQuery("field2", "quick brown").slop(0)).get();
@@ -211,8 +189,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testConstantScoreQuery() throws Exception {
         Random random = random();
         createIndex("test");
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("field1", "quick brown fox", "field2", "quick brown fox"),
-                client().prepareIndex("test").setId("2").setSource("field1", "quick lazy huge brown fox", "field2",
+        indexRandom(true, client().prepareIndex("test", "type1", "1").setSource("field1", "quick brown fox", "field2", "quick brown fox"),
+                client().prepareIndex("test", "type1", "2").setSource("field1", "quick lazy huge brown fox", "field2",
                         "quick lazy huge brown fox"));
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(constantScoreQuery(matchQuery("field1", "quick"))).get();
@@ -243,7 +221,7 @@ public class SearchQueryIT extends ESIntegTestCase {
         int num = scaledRandomIntBetween(100, 200);
         IndexRequestBuilder[] builders = new IndexRequestBuilder[num];
         for (int i = 0; i < builders.length; i++) {
-            builders[i] = client().prepareIndex("test_1").setId("" + i).setSource("f", English.intToEnglish(i));
+            builders[i] = client().prepareIndex("test_1", "type", "" + i).setSource("f", English.intToEnglish(i));
         }
         createIndex("test_1");
         indexRandom(true, builders);
@@ -274,8 +252,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     // see #3521
     public void testAllDocsQueryString() throws InterruptedException, ExecutionException {
         createIndex("test");
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("foo", "bar"),
-                client().prepareIndex("test").setId("2").setSource("foo", "bar")
+        indexRandom(true, client().prepareIndex("test", "type1", "1").setSource("foo", "bar"),
+                client().prepareIndex("test", "type1", "2").setSource("foo", "bar")
         );
 
         int iters = scaledRandomIntBetween(100, 200);
@@ -294,7 +272,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testQueryStringAnalyzedWildcard() throws Exception {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value_1", "field2", "value_2").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value_1", "field2", "value_2").get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("value*")).get();
@@ -316,7 +294,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testLowercaseExpandedTerms() {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value_1", "field2", "value_2").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value_1", "field2", "value_2").get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("VALUE_3~1")).get();
@@ -333,14 +311,14 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryString() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").setMapping(
-            "past", "type=date", "future", "type=date"
+        assertAcked(prepareCreate("test").addMapping(
+                "type", "past", "type=date", "future", "type=date"
         ));
 
         ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
         String aMonthAgo = DateTimeFormatter.ISO_LOCAL_DATE.format(now.minusMonths(1));
         String aMonthFromNow = DateTimeFormatter.ISO_LOCAL_DATE.format(now.plusMonths(1));
-        client().prepareIndex("test").setId("1").setSource("past", aMonthAgo, "future", aMonthFromNow).get();
+        client().prepareIndex("test", "type", "1").setSource("past", aMonthAgo, "future", aMonthFromNow).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("past:[now-2M/d TO now/d]")).get();
@@ -359,12 +337,12 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryStringWithTimeZone_7880() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").setMapping("past", "type=date"));
+        assertAcked(prepareCreate("test").addMapping("type", "past", "type=date"));
 
         ZoneId timeZone = randomZone();
         String now = DateFormatter.forPattern("strict_date_optional_time").format(Instant.now().atZone(timeZone));
         logger.info(" --> Using time_zone [{}], now is [{}]", timeZone.getId(), now);
-        client().prepareIndex("test").setId("1").setSource("past", now).get();
+        client().prepareIndex("test", "type", "1").setSource("past", now).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("past:[now-1m/m TO now+1m/m]")
@@ -376,12 +354,12 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryStringWithTimeZone_10477() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").setMapping(
-                "past", "type=date"
+        assertAcked(prepareCreate("test").addMapping(
+                "type", "past", "type=date"
         ));
 
-        client().prepareIndex("test").setId("1").setSource("past", "2015-04-05T23:00:00+0000").get();
-        client().prepareIndex("test").setId("2").setSource("past", "2015-04-06T00:00:00+0000").get();
+        client().prepareIndex("test", "type", "1").setSource("past", "2015-04-05T23:00:00+0000").get();
+        client().prepareIndex("test", "type", "2").setSource("past", "2015-04-06T00:00:00+0000").get();
         refresh();
 
         // Timezone set with dates
@@ -412,9 +390,9 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testIdsQueryTestsIdIndexed() throws Exception {
         assertAcked(client().admin().indices().prepareCreate("test"));
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("field1", "value1"),
-                client().prepareIndex("test").setId("2").setSource("field1", "value2"),
-                client().prepareIndex("test").setId("3").setSource("field1", "value3"));
+        indexRandom(true, client().prepareIndex("test", "type1", "1").setSource("field1", "value1"),
+                client().prepareIndex("test", "type1", "2").setSource("field1", "value2"),
+                client().prepareIndex("test", "type1", "3").setSource("field1", "value3"));
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(constantScoreQuery(idsQuery().addIds("1", "3"))).get();
         assertHitCount(searchResponse, 2L);
@@ -441,7 +419,7 @@ public class SearchQueryIT extends ESIntegTestCase {
                     .indices()
                     .prepareCreate(indexName));
 
-            indexRandom(true, client().prepareIndex(indexName).setId(indexName + "1").setSource("field1", "value1"));
+            indexRandom(true, client().prepareIndex(indexName, "type1", indexName + "1").setSource("field1", "value1"));
 
         }
 
@@ -474,16 +452,16 @@ public class SearchQueryIT extends ESIntegTestCase {
         createIndex("test");
 
         indexRandom(true,
-                client().prepareIndex("test").setId("1")
+                client().prepareIndex("test", "type1", "1")
                 .setSource(jsonBuilder().startObject().startObject("obj1").field("obj1_val", "1").endObject().field("x1", "x_1")
                         .field("field1", "value1_1").field("field2", "value2_1").endObject()),
-                client().prepareIndex("test").setId("2")
+                client().prepareIndex("test", "type1", "2")
                 .setSource(jsonBuilder().startObject().startObject("obj1").field("obj1_val", "1").endObject().field("x2", "x_2")
                         .field("field1", "value1_2").endObject()),
-                client().prepareIndex("test").setId("3")
+                client().prepareIndex("test", "type1", "3")
                 .setSource(jsonBuilder().startObject().startObject("obj2").field("obj2_val", "1").endObject().field("y1", "y_1")
                         .field("field2", "value2_3").endObject()),
-                client().prepareIndex("test").setId("4")
+                client().prepareIndex("test", "type1", "4")
                 .setSource(jsonBuilder().startObject().startObject("obj2").field("obj2_val", "1").endObject().field("y2", "y_2")
                         .field("field3", "value3_4").endObject()) );
 
@@ -522,7 +500,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testPassQueryOrFilterAsJSONString() throws Exception {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value1_1", "field2", "value2_1").setRefreshPolicy(IMMEDIATE).get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1_1", "field2", "value2_1").setRefreshPolicy(IMMEDIATE).get();
 
         WrapperQueryBuilder wrapper = new WrapperQueryBuilder("{ \"term\" : { \"field1\" : \"value1_1\" } }");
         assertHitCount(client().prepareSearch().setQuery(wrapper).get(), 1L);
@@ -537,7 +515,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testFiltersWithCustomCacheKey() throws Exception {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1").get();
         refresh();
         SearchResponse searchResponse = client().prepareSearch("test").setQuery(constantScoreQuery(termsQuery("field1", "value1"))).get();
         assertHitCount(searchResponse, 1L);
@@ -553,11 +531,11 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testMatchQueryNumeric() throws Exception {
-        assertAcked(prepareCreate("test").setMapping("long", "type=long", "double", "type=double"));
+        assertAcked(prepareCreate("test").addMapping("type1", "long", "type=long", "double", "type=double"));
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("long", 1L, "double", 1.0d),
-                client().prepareIndex("test").setId("2").setSource("long", 2L, "double", 2.0d),
-                client().prepareIndex("test").setId("3").setSource("long", 3L, "double", 3.0d));
+        indexRandom(true, client().prepareIndex("test", "type1", "1").setSource("long", 1L, "double", 1.0d),
+                client().prepareIndex("test", "type1", "2").setSource("long", 2L, "double", 2.0d),
+                client().prepareIndex("test", "type1", "3").setSource("long", 3L, "double", 3.0d));
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(matchQuery("long", "1")).get();
         assertHitCount(searchResponse, 1L);
@@ -570,10 +548,10 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testMatchQueryFuzzy() throws Exception {
-        assertAcked(prepareCreate("test").setMapping("text", "type=text"));
+        assertAcked(prepareCreate("test").addMapping("_doc", "text", "type=text"));
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("text", "Unit"),
-                client().prepareIndex("test").setId("2").setSource("text", "Unity"));
+        indexRandom(true, client().prepareIndex("test", "_doc", "1").setSource("text", "Unit"),
+                client().prepareIndex("test", "_doc", "2").setSource("text", "Unity"));
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(matchQuery("text", "uniy").fuzziness(Fuzziness.fromEdits(0)))
                 .get();
@@ -600,9 +578,9 @@ public class SearchQueryIT extends ESIntegTestCase {
         createIndex("test");
 
         indexRandom(true,
-                client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value4", "field3", "value3"),
-                client().prepareIndex("test").setId("2").setSource("field1", "value2", "field2", "value5", "field3", "value2"),
-                client().prepareIndex("test").setId("3").setSource("field1", "value3", "field2", "value6", "field3", "value1") );
+                client().prepareIndex("test", "type1", "1").setSource("field1", "value1", "field2", "value4", "field3", "value3"),
+                client().prepareIndex("test", "type1", "2").setSource("field1", "value2", "field2", "value5", "field3", "value2"),
+                client().prepareIndex("test", "type1", "3").setSource("field1", "value3", "field2", "value6", "field3", "value1") );
 
         MultiMatchQueryBuilder builder = multiMatchQuery("value1 value2 value4", "field1", "field2");
         SearchResponse searchResponse = client().prepareSearch().setQuery(builder)
@@ -643,28 +621,14 @@ public class SearchQueryIT extends ESIntegTestCase {
         assertSearchHits(searchResponse, "3", "1");
 
         // Test lenient
-        client().prepareIndex("test").setId("3").setSource("field1", "value7", "field2", "value8", "field4", 5).get();
+        client().prepareIndex("test", "type1", "3").setSource("field1", "value7", "field2", "value8", "field4", 5).get();
         refresh();
 
         builder = multiMatchQuery("value1", "field1", "field2", "field4");
 
-        //when the number for shards is randomized and we expect failures
-        //we can either run into partial or total failures depending on the current number of shards
-        Matcher<String> reasonMatcher = containsString("NumberFormatException: For input string: \"value1\"");
-        ShardSearchFailure[] shardFailures;
-        try {
-            client().prepareSearch().setQuery(builder).get();
-            shardFailures = searchResponse.getShardFailures();
-            assertThat("Expected shard failures, got none", shardFailures, not(emptyArray()));
-        } catch (SearchPhaseExecutionException e) {
-            assertThat(e.status(), equalTo(RestStatus.BAD_REQUEST));
-            shardFailures = e.shardFailures();
-        }
-
-        for (ShardSearchFailure shardSearchFailure : shardFailures) {
-            assertThat(shardSearchFailure.status(), equalTo(RestStatus.BAD_REQUEST));
-            assertThat(shardSearchFailure.reason(), reasonMatcher);
-        }
+        assertFailures(client().prepareSearch().setQuery(builder),
+                RestStatus.BAD_REQUEST,
+                containsString("NumberFormatException[For input string: \"value1\"]"));
 
         builder.lenient(true);
         searchResponse = client().prepareSearch().setQuery(builder).get();
@@ -674,9 +638,9 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMatchQueryZeroTermsQuery() {
         assertAcked(prepareCreate("test")
-                .setMapping("field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
-        client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
-        client().prepareIndex("test").setId("2").setSource("field1", "value2").get();
+                .addMapping("type1", "field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1").get();
+        client().prepareIndex("test", "type1", "2").setSource("field1", "value2").get();
         refresh();
 
         BoolQueryBuilder boolQuery = boolQuery()
@@ -698,9 +662,9 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMultiMatchQueryZeroTermsQuery() {
         assertAcked(prepareCreate("test")
-                .setMapping("field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
-        client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
-        client().prepareIndex("test").setId("2").setSource("field1", "value3", "field2", "value4").get();
+                .addMapping("type1", "field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
+        client().prepareIndex("test", "type1", "1").setSource("field1", "value1", "field2", "value2").get();
+        client().prepareIndex("test", "type1", "2").setSource("field1", "value3", "field2", "value4").get();
         refresh();
 
 
@@ -724,8 +688,8 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMultiMatchQueryMinShouldMatch() {
         createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("field1", new String[]{"value1", "value2", "value3"}).get();
-        client().prepareIndex("test").setId("2").setSource("field2", "value1").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", new String[]{"value1", "value2", "value3"}).get();
+        client().prepareIndex("test", "type1", "2").setSource("field2", "value1").get();
         refresh();
 
         MultiMatchQueryBuilder multiMatchQuery = multiMatchQuery("value1 value2 foo", "field1", "field2");
@@ -772,8 +736,8 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testBoolQueryMinShouldMatchBiggerThanNumberOfShouldClauses() throws IOException {
         createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("field1", new String[]{"value1", "value2", "value3"}).get();
-        client().prepareIndex("test").setId("2").setSource("field2", "value1").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", new String[]{"value1", "value2", "value3"}).get();
+        client().prepareIndex("test", "type1", "2").setSource("field2", "value1").get();
         refresh();
 
         BoolQueryBuilder boolQuery = boolQuery()
@@ -820,8 +784,8 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testFuzzyQueryString() {
         createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("str", "kimchy", "date", "2012-02-01", "num", 12).get();
-        client().prepareIndex("test").setId("2").setSource("str", "shay", "date", "2012-02-05", "num", 20).get();
+        client().prepareIndex("test", "type1", "1").setSource("str", "kimchy", "date", "2012-02-01", "num", 12).get();
+        client().prepareIndex("test", "type1", "2").setSource("str", "shay", "date", "2012-02-05", "num", 20).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("str:kimcy~1")).get();
@@ -837,8 +801,8 @@ public class SearchQueryIT extends ESIntegTestCase {
         assertAcked(prepareCreate("test").setSettings(Settings.builder().put(SETTING_NUMBER_OF_SHARDS, 1)));
 
         indexRandom(true, false,
-            client().prepareIndex("test").setId("1").setSource("important", "phrase match", "less_important", "nothing important"),
-            client().prepareIndex("test").setId("2").setSource("important", "nothing important", "less_important", "phrase match")
+            client().prepareIndex("test", "type1", "1").setSource("important", "phrase match", "less_important", "nothing important"),
+            client().prepareIndex("test", "type1", "2").setSource("important", "nothing important", "less_important", "phrase match")
         );
 
         SearchResponse searchResponse = client().prepareSearch()
@@ -851,8 +815,8 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testSpecialRangeSyntaxInQueryString() {
         createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("str", "kimchy", "date", "2012-02-01", "num", 12).get();
-        client().prepareIndex("test").setId("2").setSource("str", "shay", "date", "2012-02-05", "num", 20).get();
+        client().prepareIndex("test", "type1", "1").setSource("str", "kimchy", "date", "2012-02-01", "num", 12).get();
+        client().prepareIndex("test", "type1", "2").setSource("str", "shay", "date", "2012-02-05", "num", 20).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(queryStringQuery("num:>19")).get();
@@ -880,12 +844,12 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testEmptytermsQuery() throws Exception {
-        assertAcked(prepareCreate("test").setMapping("term", "type=text"));
+        assertAcked(prepareCreate("test").addMapping("type", "term", "type=text"));
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("term", "1"),
-                client().prepareIndex("test").setId("2").setSource("term", "2"),
-                client().prepareIndex("test").setId("3").setSource("term", "3"),
-                client().prepareIndex("test").setId("4").setSource("term", "4") );
+        indexRandom(true, client().prepareIndex("test", "type", "1").setSource("term", "1"),
+                client().prepareIndex("test", "type", "2").setSource("term", "2"),
+                client().prepareIndex("test", "type", "3").setSource("term", "3"),
+                client().prepareIndex("test", "type", "4").setSource("term", "4") );
 
         SearchResponse searchResponse = client().prepareSearch("test")
                 .setQuery(constantScoreQuery(termsQuery("term", new String[0]))).get();
@@ -896,13 +860,13 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testTermsQuery() throws Exception {
-        assertAcked(prepareCreate("test").setMapping("str", "type=text", "lng", "type=long", "dbl", "type=double"));
+        assertAcked(prepareCreate("test").addMapping("type", "str", "type=text", "lng", "type=long", "dbl", "type=double"));
 
         indexRandom(true,
-                client().prepareIndex("test").setId("1").setSource("str", "1", "lng", 1L, "dbl", 1.0d),
-                client().prepareIndex("test").setId("2").setSource("str", "2", "lng", 2L, "dbl", 2.0d),
-                client().prepareIndex("test").setId("3").setSource("str", "3", "lng", 3L, "dbl", 3.0d),
-                client().prepareIndex("test").setId("4").setSource("str", "4", "lng", 4L, "dbl", 4.0d));
+                client().prepareIndex("test", "type", "1").setSource("str", "1", "lng", 1L, "dbl", 1.0d),
+                client().prepareIndex("test", "type", "2").setSource("str", "2", "lng", 2L, "dbl", 2.0d),
+                client().prepareIndex("test", "type", "3").setSource("str", "3", "lng", 3L, "dbl", 3.0d),
+                client().prepareIndex("test", "type", "4").setSource("str", "4", "lng", 4L, "dbl", 4.0d));
 
         SearchResponse searchResponse = client().prepareSearch("test")
                 .setQuery(constantScoreQuery(termsQuery("str", "1", "4"))).get();
@@ -963,110 +927,110 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testTermsLookupFilter() throws Exception {
-        assertAcked(prepareCreate("lookup").setMapping("terms","type=text", "other", "type=text"));
-        assertAcked(prepareCreate("lookup2").setMapping(
-                jsonBuilder().startObject().startObject("_doc").startObject("properties")
+        assertAcked(prepareCreate("lookup").addMapping("type", "terms","type=text", "other", "type=text"));
+        assertAcked(prepareCreate("lookup2").addMapping("type",
+                jsonBuilder().startObject().startObject("type").startObject("properties")
                         .startObject("arr").startObject("properties").startObject("term").field("type", "text")
                         .endObject().endObject().endObject().endObject().endObject().endObject()));
-        assertAcked(prepareCreate("lookup3").setMapping("_source", "enabled=false", "terms","type=text"));
-        assertAcked(prepareCreate("test").setMapping("term", "type=text"));
+        assertAcked(prepareCreate("lookup3").addMapping("type", "_source", "enabled=false", "terms","type=text"));
+        assertAcked(prepareCreate("test").addMapping("type", "term", "type=text"));
 
         indexRandom(true,
-                client().prepareIndex("lookup").setId("1").setSource("terms", new String[]{"1", "3"}),
-                client().prepareIndex("lookup").setId("2").setSource("terms", new String[]{"2"}),
-                client().prepareIndex("lookup").setId("3").setSource("terms", new String[]{"2", "4"}),
-                client().prepareIndex("lookup").setId("4").setSource("other", "value"),
-                client().prepareIndex("lookup2").setId("1").setSource(XContentFactory.jsonBuilder().startObject()
+                client().prepareIndex("lookup", "type", "1").setSource("terms", new String[]{"1", "3"}),
+                client().prepareIndex("lookup", "type", "2").setSource("terms", new String[]{"2"}),
+                client().prepareIndex("lookup", "type", "3").setSource("terms", new String[]{"2", "4"}),
+                client().prepareIndex("lookup", "type", "4").setSource("other", "value"),
+                client().prepareIndex("lookup2", "type", "1").setSource(XContentFactory.jsonBuilder().startObject()
                         .startArray("arr")
                         .startObject().field("term", "1").endObject()
                         .startObject().field("term", "3").endObject()
                         .endArray()
                         .endObject()),
-                client().prepareIndex("lookup2").setId("2").setSource(XContentFactory.jsonBuilder().startObject()
+                client().prepareIndex("lookup2", "type", "2").setSource(XContentFactory.jsonBuilder().startObject()
                         .startArray("arr")
                         .startObject().field("term", "2").endObject()
                         .endArray()
                         .endObject()),
-                client().prepareIndex("lookup2").setId("3").setSource(XContentFactory.jsonBuilder().startObject()
+                client().prepareIndex("lookup2", "type", "3").setSource(XContentFactory.jsonBuilder().startObject()
                         .startArray("arr")
                         .startObject().field("term", "2").endObject()
                         .startObject().field("term", "4").endObject()
                         .endArray()
                         .endObject()),
-                client().prepareIndex("lookup3").setId("1").setSource("terms", new String[]{"1", "3"}),
-                client().prepareIndex("test").setId("1").setSource("term", "1"),
-                client().prepareIndex("test").setId("2").setSource("term", "2"),
-                client().prepareIndex("test").setId("3").setSource("term", "3"),
-                client().prepareIndex("test").setId("4").setSource("term", "4") );
+                client().prepareIndex("lookup3", "type", "1").setSource("terms", new String[]{"1", "3"}),
+                client().prepareIndex("test", "type", "1").setSource("term", "1"),
+                client().prepareIndex("test", "type", "2").setSource("term", "2"),
+                client().prepareIndex("test", "type", "3").setSource("term", "3"),
+                client().prepareIndex("test", "type", "4").setSource("term", "4") );
 
         SearchResponse searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term" , new TermsLookup("lookup", "1", "terms"))).get();
+                .setQuery(termsLookupQuery("term" , new TermsLookup("lookup", "type", "1", "terms"))).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "1", "3");
 
         // same as above, just on the _id...
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("_id", new TermsLookup("lookup", "1", "terms"))
+                .setQuery(termsLookupQuery("_id", new TermsLookup("lookup", "type", "1", "terms"))
                 ).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "1", "3");
 
         // another search with same parameters...
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "1", "terms"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "type", "1", "terms"))).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "1", "3");
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "2", "terms"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "type", "2", "terms"))).get();
         assertHitCount(searchResponse, 1L);
         assertFirstHit(searchResponse, hasId("2"));
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "3", "terms"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "type", "3", "terms"))).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "2", "4");
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "4", "terms"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup", "type", "4", "terms"))).get();
         assertHitCount(searchResponse, 0L);
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "1", "arr.term"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "type", "1", "arr.term"))).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "1", "3");
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "2", "arr.term"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "type", "2", "arr.term"))).get();
         assertHitCount(searchResponse, 1L);
         assertFirstHit(searchResponse, hasId("2"));
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "3", "arr.term"))).get();
+                .setQuery(termsLookupQuery("term", new TermsLookup("lookup2", "type", "3", "arr.term"))).get();
         assertHitCount(searchResponse, 2L);
         assertSearchHits(searchResponse, "2", "4");
 
         searchResponse = client().prepareSearch("test")
-                .setQuery(termsLookupQuery("not_exists", new TermsLookup("lookup2", "3", "arr.term"))).get();
+                .setQuery(termsLookupQuery("not_exists", new TermsLookup("lookup2", "type", "3", "arr.term"))).get();
         assertHitCount(searchResponse, 0L);
 
-        // index "lookup" id "missing" document does not exist: ignore the lookup terms
+        // index "lookup" type "type" id "missing" document does not exist: ignore the lookup terms
         searchResponse = client().prepareSearch("test")
-            .setQuery(termsLookupQuery("term" , new TermsLookup("lookup", "missing", "terms"))).get();
+            .setQuery(termsLookupQuery("term" , new TermsLookup("lookup", "type", "missing", "terms"))).get();
         assertHitCount(searchResponse, 0L);
 
-        // index "lookup3" has the source disabled: ignore the lookup terms
+        // index "lookup3" type "type" has the source disabled: ignore the lookup terms
         searchResponse = client().prepareSearch("test")
-            .setQuery(termsLookupQuery("term" , new TermsLookup("lookup3", "1", "terms"))).get();
+            .setQuery(termsLookupQuery("term" , new TermsLookup("lookup3", "type", "1", "terms"))).get();
         assertHitCount(searchResponse, 0L);
     }
 
     public void testBasicQueryById() throws Exception {
         assertAcked(prepareCreate("test"));
 
-        client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
-        client().prepareIndex("test").setId("2").setSource("field1", "value2").get();
-        client().prepareIndex("test").setId("3").setSource("field1", "value3").get();
+        client().prepareIndex("test", "_doc", "1").setSource("field1", "value1").get();
+        client().prepareIndex("test", "_doc", "2").setSource("field1", "value2").get();
+        client().prepareIndex("test", "_doc", "3").setSource("field1", "value3").get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(idsQuery().addIds("1", "2")).get();
@@ -1093,18 +1057,18 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testNumericTermsAndRanges() throws Exception {
         assertAcked(prepareCreate("test")
-                .setMapping(
+                .addMapping("type1",
                         "num_byte", "type=byte", "num_short", "type=short",
                         "num_integer", "type=integer", "num_long", "type=long",
                         "num_float", "type=float", "num_double", "type=double"));
 
-        client().prepareIndex("test").setId("1").setSource("num_byte", 1, "num_short", 1, "num_integer", 1,
+        client().prepareIndex("test", "type1", "1").setSource("num_byte", 1, "num_short", 1, "num_integer", 1,
                 "num_long", 1, "num_float", 1, "num_double", 1).get();
 
-        client().prepareIndex("test").setId("2").setSource("num_byte", 2, "num_short", 2, "num_integer", 2,
+        client().prepareIndex("test", "type1", "2").setSource("num_byte", 2, "num_short", 2, "num_integer", 2,
                 "num_long", 2, "num_float", 2, "num_double", 2).get();
 
-        client().prepareIndex("test").setId("17").setSource("num_byte", 17, "num_short", 17, "num_integer", 17,
+        client().prepareIndex("test", "type1", "17").setSource("num_byte", 17, "num_short", 17, "num_integer", 17,
                 "num_long", 17, "num_float", 17, "num_double", 17).get();
         refresh();
 
@@ -1192,15 +1156,15 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testNumericRangeFilter_2826() throws Exception {
         assertAcked(prepareCreate("test")
-                .setMapping(
+                .addMapping("type1",
                         "num_byte", "type=byte", "num_short", "type=short",
                         "num_integer", "type=integer", "num_long", "type=long",
                         "num_float", "type=float", "num_double", "type=double"));
 
-        client().prepareIndex("test").setId("1").setSource("field1", "test1", "num_long", 1).get();
-        client().prepareIndex("test").setId("2").setSource("field1", "test1", "num_long", 2).get();
-        client().prepareIndex("test").setId("3").setSource("field1", "test2", "num_long", 3).get();
-        client().prepareIndex("test").setId("4").setSource("field1", "test2", "num_long", 4).get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", "test1", "num_long", 1).get();
+        client().prepareIndex("test", "type1", "2").setSource("field1", "test1", "num_long", 2).get();
+        client().prepareIndex("test", "type1", "3").setSource("field1", "test2", "num_long", 3).get();
+        client().prepareIndex("test", "type1", "4").setSource("field1", "test2", "num_long", 4).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch("test").setPostFilter(
@@ -1235,10 +1199,10 @@ public class SearchQueryIT extends ESIntegTestCase {
                 .setSettings(Settings.builder().put(SETTING_NUMBER_OF_SHARDS, between(2, DEFAULT_MAX_NUM_SHARDS))));
 
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("description", "foo other anything bar"),
-                client().prepareIndex("test").setId("2").setSource("description", "foo other anything"),
-                client().prepareIndex("test").setId("3").setSource("description", "foo other"),
-                client().prepareIndex("test").setId("4").setSource("description", "foo"));
+        indexRandom(true, client().prepareIndex("test", "test", "1").setSource("description", "foo other anything bar"),
+                client().prepareIndex("test", "test", "2").setSource("description", "foo other anything"),
+                client().prepareIndex("test", "test", "3").setSource("description", "foo other"),
+                client().prepareIndex("test", "test", "4").setSource("description", "foo"));
 
         SearchResponse searchResponse = client().prepareSearch("test").setQuery(matchAllQuery())
                 .setSearchType(SearchType.DFS_QUERY_THEN_FETCH).get();
@@ -1255,7 +1219,7 @@ public class SearchQueryIT extends ESIntegTestCase {
         createIndex("test");
 
         indexRandom(true,
-            client().prepareIndex("test").setId("1")
+            client().prepareIndex("test", "test", "1")
                     .setSource("description", "it's cold outside, there's no kind of atmosphere"));
 
         String json = "{ \"intervals\" : " +
@@ -1278,10 +1242,10 @@ public class SearchQueryIT extends ESIntegTestCase {
         createIndex("test");
 
 
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("description", "foo other anything bar"),
-                client().prepareIndex("test").setId("2").setSource("description", "foo other anything"),
-                client().prepareIndex("test").setId("3").setSource("description", "foo other"),
-                client().prepareIndex("test").setId("4").setSource("description", "foo"));
+        indexRandom(true, client().prepareIndex("test", "test", "1").setSource("description", "foo other anything bar"),
+                client().prepareIndex("test", "test", "2").setSource("description", "foo other anything"),
+                client().prepareIndex("test", "test", "3").setSource("description", "foo other"),
+                client().prepareIndex("test", "test", "4").setSource("description", "foo"));
 
         SearchResponse searchResponse = client().prepareSearch("test")
                 .setQuery(spanOrQuery(spanTermQuery("description", "bar"))).get();
@@ -1296,10 +1260,10 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testSpanMultiTermQuery() throws IOException {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("description", "foo other anything bar", "count", 1).get();
-        client().prepareIndex("test").setId("2").setSource("description", "foo other anything", "count", 2).get();
-        client().prepareIndex("test").setId("3").setSource("description", "foo other", "count", 3).get();
-        client().prepareIndex("test").setId("4").setSource("description", "fop", "count", 4).get();
+        client().prepareIndex("test", "test", "1").setSource("description", "foo other anything bar", "count", 1).get();
+        client().prepareIndex("test", "test", "2").setSource("description", "foo other anything", "count", 2).get();
+        client().prepareIndex("test", "test", "3").setSource("description", "foo other", "count", 3).get();
+        client().prepareIndex("test", "test", "4").setSource("description", "fop", "count", 4).get();
         refresh();
 
         SearchResponse response = client().prepareSearch("test")
@@ -1327,8 +1291,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testSpanNot() throws IOException, ExecutionException, InterruptedException {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("description", "the quick brown fox jumped over the lazy dog").get();
-        client().prepareIndex("test").setId("2").setSource("description", "the quick black fox leaped over the sleeping dog").get();
+        client().prepareIndex("test", "test", "1").setSource("description", "the quick brown fox jumped over the lazy dog").get();
+        client().prepareIndex("test", "test", "2").setSource("description", "the quick black fox leaped over the sleeping dog").get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch("test")
@@ -1351,7 +1315,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testSimpleDFSQuery() throws IOException {
         assertAcked(prepareCreate("test")
-            .setMapping(jsonBuilder()
+            .addMapping("_doc", jsonBuilder()
                 .startObject()
                 .startObject("_doc")
                 .startObject("_routing")
@@ -1375,13 +1339,13 @@ public class SearchQueryIT extends ESIntegTestCase {
             );
 
 
-        client().prepareIndex("test").setId("1").setRouting("Y").setSource("online", false, "bs", "Y", "ts",
+        client().prepareIndex("test", "_doc", "1").setRouting("Y").setSource("online", false, "bs", "Y", "ts",
             System.currentTimeMillis() - 100, "type", "s").get();
-        client().prepareIndex("test").setId("2").setRouting("X").setSource("online", true, "bs", "X", "ts",
+        client().prepareIndex("test", "_doc", "2").setRouting("X").setSource("online", true, "bs", "X", "ts",
             System.currentTimeMillis() - 10000000, "type", "s").get();
-        client().prepareIndex("test").setId("3").setRouting(randomAlphaOfLength(2))
+        client().prepareIndex("test", "_doc", "3").setRouting(randomAlphaOfLength(2))
             .setSource("online", false, "ts", System.currentTimeMillis() - 100, "type", "bs").get();
-        client().prepareIndex("test").setId("4").setRouting(randomAlphaOfLength(2))
+        client().prepareIndex("test", "_doc", "4").setRouting(randomAlphaOfLength(2))
             .setSource("online", true, "ts", System.currentTimeMillis() - 123123, "type", "bs").get();
         refresh();
 
@@ -1407,7 +1371,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testMultiFieldQueryString() {
-        client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").setRefreshPolicy(IMMEDIATE).get();
+        client().prepareIndex("test", "s", "1").setSource("field1", "value1", "field2", "value2").setRefreshPolicy(IMMEDIATE).get();
 
         logger.info("regular");
         assertHitCount(client().prepareSearch("test").setQuery(queryStringQuery("value1").field("field1").field("field2")).get(), 1);
@@ -1430,7 +1394,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testMultiMatchLenientIssue3797() {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("field1", 123, "field2", "value2").get();
+        client().prepareIndex("test", "type1", "1").setSource("field1", 123, "field2", "value2").get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch("test")
@@ -1449,10 +1413,10 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testMinScore() throws ExecutionException, InterruptedException {
         createIndex("test");
 
-        client().prepareIndex("test").setId("1").setSource("score", 1.5).get();
-        client().prepareIndex("test").setId("2").setSource("score", 1.0).get();
-        client().prepareIndex("test").setId("3").setSource("score", 2.0).get();
-        client().prepareIndex("test").setId("4").setSource("score", 0.5).get();
+        client().prepareIndex("test", "test", "1").setSource("score", 1.5).get();
+        client().prepareIndex("test", "test", "2").setSource("score", 1.0).get();
+        client().prepareIndex("test", "test", "3").setSource("score", 2.0).get();
+        client().prepareIndex("test", "test", "4").setSource("score", 0.5).get();
         refresh();
 
         SearchResponse searchResponse = client().prepareSearch("test").setQuery(
@@ -1465,8 +1429,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testQueryStringWithSlopAndFields() {
         assertAcked(prepareCreate("test"));
 
-        client().prepareIndex("test").setId("1").setSource("desc", "one two three", "type", "customer").get();
-        client().prepareIndex("test").setId("2").setSource("desc", "one two three", "type", "product").get();
+        client().prepareIndex("test", "_doc", "1").setSource("desc", "one two three", "type", "customer").get();
+        client().prepareIndex("test", "_doc", "2").setSource("desc", "one two three", "type", "product").get();
         refresh();
         {
             SearchResponse searchResponse = client().prepareSearch("test").setQuery(QueryBuilders.queryStringQuery("\"one two\"")
@@ -1497,15 +1461,15 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testDateProvidedAsNumber() throws InterruptedException {
         createIndex("test");
-        assertAcked(client().admin().indices().preparePutMapping("test")
+        assertAcked(client().admin().indices().preparePutMapping("test").setType("type")
             .setSource("field", "type=date,format=epoch_millis").get());
         indexRandom(true,
-                client().prepareIndex("test").setId("1").setSource("field", 1000000000001L),
-                client().prepareIndex("test").setId("2").setSource("field", 1000000000000L),
-                client().prepareIndex("test").setId("3").setSource("field", 999999999999L),
-                client().prepareIndex("test").setId("4").setSource("field", 1000000000002L),
-                client().prepareIndex("test").setId("5").setSource("field", 1000000000003L),
-                client().prepareIndex("test").setId("6").setSource("field", 999999999999L));
+                client().prepareIndex("test", "type", "1").setSource("field", 1000000000001L),
+                client().prepareIndex("test", "type", "2").setSource("field", 1000000000000L),
+                client().prepareIndex("test", "type", "3").setSource("field", 999999999999L),
+                client().prepareIndex("test", "type", "4").setSource("field", 1000000000002L),
+                client().prepareIndex("test", "type", "5").setSource("field", 1000000000003L),
+                client().prepareIndex("test", "type", "6").setSource("field", 999999999999L));
 
         assertHitCount(client().prepareSearch("test").setSize(0).setQuery(rangeQuery("field").gte(1000000000000L)).get(), 4);
         assertHitCount(client().prepareSearch("test").setSize(0).setQuery(rangeQuery("field").gte(999999999999L)).get(), 6);
@@ -1513,14 +1477,14 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testRangeQueryWithTimeZone() throws Exception {
         assertAcked(prepareCreate("test")
-                .setMapping("date", "type=date", "num", "type=integer"));
+                .addMapping("type1", "date", "type=date", "num", "type=integer"));
 
         indexRandom(true,
-                client().prepareIndex("test").setId("1").setSource("date", "2014-01-01", "num", 1),
-                client().prepareIndex("test").setId("2").setSource("date", "2013-12-31T23:00:00", "num", 2),
-                client().prepareIndex("test").setId("3").setSource("date", "2014-01-01T01:00:00", "num", 3),
+                client().prepareIndex("test", "type1", "1").setSource("date", "2014-01-01", "num", 1),
+                client().prepareIndex("test", "type1", "2").setSource("date", "2013-12-31T23:00:00", "num", 2),
+                client().prepareIndex("test", "type1", "3").setSource("date", "2014-01-01T01:00:00", "num", 3),
                 // Now in UTC+1
-                client().prepareIndex("test").setId("4")
+                client().prepareIndex("test", "type1", "4")
                     .setSource("date", Instant.now().atZone(ZoneOffset.ofHours(1)).toInstant().toEpochMilli(), "num", 4));
 
         SearchResponse searchResponse = client().prepareSearch("test")
@@ -1586,49 +1550,39 @@ public class SearchQueryIT extends ESIntegTestCase {
         assertThat(searchResponse.getHits().getAt(0).getId(), is("4"));
     }
 
-    /**
-     * Test range with a custom locale, e.g. "de" in this case. Documents here mention the day of week
-     * as "Mi" for "Mittwoch (Wednesday" and "Do" for "Donnerstag (Thursday)" and the month in the query
-     * as "Dez" for "Dezember (December)".
-     * Note: this test currently needs the JVM arg `-Djava.locale.providers=SPI,COMPAT` to be set.
-     * When running with gradle this is done implicitly through the BuildPlugin, but when running from
-     * an IDE this might need to be set manually in the run configuration. See also CONTRIBUTING.md section
-     * on "Configuring IDEs And Running Tests".
-     */
     public void testRangeQueryWithLocaleMapping() throws Exception {
         assumeTrue("need java 9 for testing ",JavaVersion.current().compareTo(JavaVersion.parse("9")) >= 0);
-        assert ("SPI,COMPAT".equals(System.getProperty("java.locale.providers"))) : "`-Djava.locale.providers=SPI,COMPAT` needs to be set";
 
         assertAcked(prepareCreate("test")
-            .setMapping(jsonBuilder().startObject().startObject("properties").startObject("date_field")
+            .addMapping("type1", jsonBuilder().startObject().startObject("properties").startObject("date_field")
                     .field("type", "date")
                     .field("format", "E, d MMM yyyy HH:mm:ss Z")
                     .field("locale", "de")
                 .endObject().endObject().endObject()));
 
         indexRandom(true,
-            client().prepareIndex("test").setId("1").setSource("date_field", "Mi, 06 Dez 2000 02:55:00 -0800"),
-            client().prepareIndex("test").setId("2").setSource("date_field", "Do, 07 Dez 2000 02:55:00 -0800")
+            client().prepareIndex("test", "type1", "1").setSource("date_field", "Mi., 06 Dez. 2000 02:55:00 -0800"),
+            client().prepareIndex("test", "type1", "2").setSource("date_field", "Do., 07 Dez. 2000 02:55:00 -0800")
         );
 
         SearchResponse searchResponse = client().prepareSearch("test")
             .setQuery(QueryBuilders.rangeQuery("date_field")
-                .gte("Di, 05 Dez 2000 02:55:00 -0800")
-                .lte("Do, 07 Dez 2000 00:00:00 -0800"))
+                .gte("Di., 05 Dez. 2000 02:55:00 -0800")
+                .lte("Do., 07 Dez. 2000 00:00:00 -0800"))
             .get();
         assertHitCount(searchResponse, 1L);
 
         searchResponse = client().prepareSearch("test")
             .setQuery(QueryBuilders.rangeQuery("date_field")
-                .gte("Di, 05 Dez 2000 02:55:00 -0800")
-                .lte("Fr, 08 Dez 2000 00:00:00 -0800"))
+                .gte("Di., 05 Dez. 2000 02:55:00 -0800")
+                .lte("Fr., 08 Dez. 2000 00:00:00 -0800"))
             .get();
         assertHitCount(searchResponse, 2L);
     }
 
     public void testSearchEmptyDoc() {
         assertAcked(prepareCreate("test").setSettings("{\"index.analysis.analyzer.default.type\":\"keyword\"}", XContentType.JSON));
-        client().prepareIndex("test").setId("1").setSource("{}", XContentType.JSON).get();
+        client().prepareIndex("test", "type1", "1").setSource("{}", XContentType.JSON).get();
 
         refresh();
         assertHitCount(client().prepareSearch().setQuery(matchAllQuery()).get(), 1L);
@@ -1636,8 +1590,8 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMatchPhrasePrefixQuery() throws ExecutionException, InterruptedException {
         createIndex("test1");
-        indexRandom(true, client().prepareIndex("test1").setId("1").setSource("field", "Johnnie Walker Black Label"),
-        client().prepareIndex("test1").setId("2").setSource("field", "trying out Elasticsearch"));
+        indexRandom(true, client().prepareIndex("test1", "type1", "1").setSource("field", "Johnnie Walker Black Label"),
+        client().prepareIndex("test1", "type1", "2").setSource("field", "trying out Elasticsearch"));
 
 
         SearchResponse searchResponse = client().prepareSearch().setQuery(matchPhrasePrefixQuery("field", "Johnnie la").slop(between(2, 5)))
@@ -1654,7 +1608,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testQueryStringParserCache() throws Exception {
         createIndex("test");
-        indexRandom(true, false, client().prepareIndex("test").setId("1").setSource("nameTokens", "xyz"));
+        indexRandom(true, false, client().prepareIndex("test", "type", "1").setSource("nameTokens", "xyz"));
 
 
         SearchResponse response = client().prepareSearch("test")
@@ -1679,15 +1633,50 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testRangeQueryRangeFields_24744() throws Exception {
-        assertAcked(prepareCreate("test").setMapping("int_range", "type=integer_range"));
+        assertAcked(prepareCreate("test").addMapping("type1", "int_range", "type=integer_range"));
 
-        client().prepareIndex("test").setId("1")
+        client().prepareIndex("test", "type1", "1")
                 .setSource(jsonBuilder().startObject().startObject("int_range").field("gte", 10).field("lte", 20).endObject().endObject())
                 .get();
         refresh();
 
         RangeQueryBuilder range = new RangeQueryBuilder("int_range").relation("intersects").from(Integer.MIN_VALUE).to(Integer.MAX_VALUE);
         SearchResponse searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 1);
+    }
+
+    public void testRangeQueryTypeField_31476() throws Exception {
+        assertAcked(prepareCreate("test").addMapping("foo", "field", "type=keyword"));
+
+        client().prepareIndex("test", "foo", "1").setSource("field", "value").get();
+        refresh();
+
+        RangeQueryBuilder range = new RangeQueryBuilder("_type").from("ape").to("zebra");
+        SearchResponse searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 1);
+
+        range = new RangeQueryBuilder("_type").from("monkey").to("zebra");
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 0);
+
+        range = new RangeQueryBuilder("_type").from("ape").to("donkey");
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 0);
+
+        range = new RangeQueryBuilder("_type").from("ape").to("foo").includeUpper(false);
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 0);
+
+        range = new RangeQueryBuilder("_type").from("ape").to("foo").includeUpper(true);
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 1);
+
+        range = new RangeQueryBuilder("_type").from("foo").to("zebra").includeLower(false);
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
+        assertHitCount(searchResponse, 0);
+
+        range = new RangeQueryBuilder("_type").from("foo").to("zebra").includeLower(true);
+        searchResponse = client().prepareSearch("test").setQuery(range).get();
         assertHitCount(searchResponse, 1);
     }
 
@@ -1710,7 +1699,7 @@ public class SearchQueryIT extends ESIntegTestCase {
                     .endObject()
                 .endObject()
             .endObject();
-        assertAcked(prepareCreate("index").setMapping(mapping));
+        assertAcked(prepareCreate("index").addMapping("_doc", mapping));
 
         XContentBuilder source = XContentFactory.jsonBuilder().startObject()
             .startObject("section")
@@ -1718,7 +1707,7 @@ public class SearchQueryIT extends ESIntegTestCase {
             .endObject()
         .endObject();
 
-        index("index", "1", source);
+        index("index", "_doc", "1", source);
         refresh();
 
         QueryBuilder nestedQuery = QueryBuilders.nestedQuery("section",
@@ -1731,7 +1720,7 @@ public class SearchQueryIT extends ESIntegTestCase {
    public void testFieldAliasesForMetaFields() throws Exception {
         XContentBuilder mapping = XContentFactory.jsonBuilder()
             .startObject()
-                .startObject("_doc")
+                .startObject("type")
                     .startObject("properties")
                         .startObject("id-alias")
                             .field("type", "alias")
@@ -1744,152 +1733,25 @@ public class SearchQueryIT extends ESIntegTestCase {
                     .endObject()
             .endObject()
         .endObject();
-        assertAcked(prepareCreate("test").setMapping(mapping));
+        assertAcked(prepareCreate("test").addMapping("type", mapping));
 
-        IndexRequestBuilder indexRequest = client().prepareIndex("test")
+        IndexRequestBuilder indexRequest = client().prepareIndex("test", "type")
             .setId("1")
             .setRouting("custom")
             .setSource("field", "value");
         indexRandom(true, false, indexRequest);
-        client().admin().cluster().prepareUpdateSettings()
-            .setTransientSettings(Settings.builder().put(IndicesService.INDICES_ID_FIELD_DATA_ENABLED_SETTING.getKey(), true))
-           .get();
-       try {
-           SearchResponse searchResponse = client().prepareSearch()
-               .setQuery(termQuery("routing-alias", "custom"))
-               .addDocValueField("id-alias")
-               .get();
-           assertHitCount(searchResponse, 1L);
 
-           SearchHit hit = searchResponse.getHits().getAt(0);
-           assertEquals(2, hit.getFields().size());
-           assertTrue(hit.getFields().containsKey("id-alias"));
-
-           DocumentField field = hit.getFields().get("id-alias");
-           assertThat(field.getValue().toString(), equalTo("1"));
-       } finally {
-           // unset cluster setting
-           client().admin().cluster().prepareUpdateSettings()
-               .setTransientSettings(Settings.builder().putNull(IndicesService.INDICES_ID_FIELD_DATA_ENABLED_SETTING.getKey()))
-               .get();
-       }
-
-   }
-
-   /**
-    * Test that wildcard queries on keyword fields get normalized
-    */
-    public void testWildcardQueryNormalizationOnKeywordField() {
-       assertAcked(prepareCreate("test")
-               .setSettings(Settings.builder()
-                       .put("index.analysis.normalizer.lowercase_normalizer.type", "custom")
-                       .putList("index.analysis.normalizer.lowercase_normalizer.filter", "lowercase")
-                       .build())
-                .setMapping("field1", "type=keyword,normalizer=lowercase_normalizer"));
-       client().prepareIndex("test").setId("1").setSource("field1", "Bbb Aaa").get();
-       refresh();
-
-        {
-            WildcardQueryBuilder wildCardQuery = wildcardQuery("field1", "Bb*");
-            SearchResponse searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
-            assertHitCount(searchResponse, 1L);
-
-            wildCardQuery = wildcardQuery("field1", "bb*");
-            searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
-            assertHitCount(searchResponse, 1L);
-        }
-   }
-
-    /**
-     * Test that wildcard queries on text fields get normalized
-     */
-     public void testWildcardQueryNormalizationOnTextField() {
-        assertAcked(prepareCreate("test")
-                .setSettings(Settings.builder()
-                        .put("index.analysis.analyzer.lowercase_analyzer.type", "custom")
-                        .put("index.analysis.analyzer.lowercase_analyzer.tokenizer", "standard")
-                        .putList("index.analysis.analyzer.lowercase_analyzer.filter", "lowercase")
-                        .build())
-                 .setMapping("field1", "type=text,analyzer=lowercase_analyzer"));
-        client().prepareIndex("test").setId("1").setSource("field1", "Bbb Aaa").get();
-        refresh();
-
-         {
-             WildcardQueryBuilder wildCardQuery = wildcardQuery("field1", "Bb*");
-             SearchResponse searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
-             assertHitCount(searchResponse, 1L);
-
-             wildCardQuery = wildcardQuery("field1", "bb*");
-             searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
-             assertHitCount(searchResponse, 1L);
-         }
-    }
-
-    /**
-     * Reserved characters should be excluded when the normalization is applied for keyword fields.
-     * See https://github.com/elastic/elasticsearch/issues/46300 for details.
-     */
-    public void testWildcardQueryNormalizationKeywordSpecialCharacters() {
-        assertAcked(prepareCreate("test")
-                .setSettings(Settings.builder().put("index.analysis.char_filter.no_wildcard.type", "mock_pattern_replace")
-                        .put("index.analysis.normalizer.no_wildcard.type", "custom")
-                        .put("index.analysis.normalizer.no_wildcard.char_filter", "no_wildcard").build())
-                .setMapping("field", "type=keyword,normalizer=no_wildcard"));
-        client().prepareIndex("test").setId("1").setSource("field", "label-1").get();
-        refresh();
-
-        WildcardQueryBuilder wildCardQuery = wildcardQuery("field", "la*");
-        SearchResponse searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
+        SearchResponse searchResponse = client().prepareSearch()
+            .setQuery(termQuery("routing-alias", "custom"))
+            .addDocValueField("id-alias")
+            .get();
         assertHitCount(searchResponse, 1L);
 
-        wildCardQuery = wildcardQuery("field", "la*el-?");
-        searchResponse = client().prepareSearch().setQuery(wildCardQuery).get();
-        assertHitCount(searchResponse, 1L);
-    }
+        SearchHit hit = searchResponse.getHits().getAt(0);
+        assertEquals(2, hit.getFields().size());
+        assertTrue(hit.getFields().containsKey("id-alias"));
 
-    public static class MockAnalysisPlugin extends Plugin implements AnalysisPlugin {
-
-        @Override
-        public Map<String, AnalysisProvider<CharFilterFactory>> getCharFilters() {
-            return singletonMap("mock_pattern_replace", (indexSettings, env, name, settings) -> {
-                class Factory implements NormalizingCharFilterFactory {
-
-                    private final Pattern pattern = Regex.compile("[\\*\\?]", null);
-
-                    @Override
-                    public String name() {
-                        return name;
-                    }
-
-                    @Override
-                    public Reader create(Reader reader) {
-                        return new PatternReplaceCharFilter(pattern, "", reader);
-                    }
-                }
-                return new Factory();
-            });
-        }
-
-        @Override
-        public Map<String, AnalysisProvider<TokenizerFactory>> getTokenizers() {
-            return singletonMap("keyword", (indexSettings, environment, name, settings) -> TokenizerFactory.newFactory(name,
-                    () -> new MockTokenizer(MockTokenizer.KEYWORD, false)));
-        }
-    }
-
-    /**
-     * Test correct handling {@link SpanBooleanQueryRewriteWithMaxClause#rewrite(IndexReader, MultiTermQuery)}. That rewrite method is e.g.
-     * set for fuzzy queries with "constant_score" rewrite nested inside a `span_multi` query and would cause NPEs due to an unset
-     * {@link AttributeSource}.
-     */
-    public void testIssueFuzzyInsideSpanMulti() {
-        createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("field", "foobarbaz").get();
-        ensureGreen();
-        refresh();
-
-        BoolQueryBuilder query = boolQuery().filter(spanMultiTermQueryBuilder(fuzzyQuery("field", "foobarbiz").rewrite("constant_score")));
-        SearchResponse response = client().prepareSearch("test").setQuery(query).get();
-        assertHitCount(response, 1);
-    }
+        DocumentField field = hit.getFields().get("id-alias");
+        assertThat(field.getValue().toString(), equalTo("1"));
+   }
 }
