@@ -6,7 +6,6 @@
 package org.elasticsearch.xpack.core.ml.dataframe.evaluation.regression;
 
 import org.elasticsearch.common.ParseField;
-import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.xcontent.ObjectParser;
@@ -16,27 +15,22 @@ import org.elasticsearch.script.Script;
 import org.elasticsearch.search.aggregations.AggregationBuilder;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.aggregations.Aggregations;
-import org.elasticsearch.search.aggregations.PipelineAggregationBuilder;
 import org.elasticsearch.search.aggregations.metrics.NumericMetricsAggregation;
-import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetric;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetricResult;
-import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationParameters;
 
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.Optional;
-
-import static org.elasticsearch.xpack.core.ml.dataframe.evaluation.MlEvaluationNamedXContentProvider.registeredMetricName;
 
 /**
  * Calculates the mean squared error between two known numerical fields.
  *
  * equation: mse = 1/n * Σ(y - y´)^2
  */
-public class MeanSquaredError implements EvaluationMetric {
+public class MeanSquaredError implements RegressionMetric {
 
     public static final ParseField NAME = new ParseField("mean_squared_error");
 
@@ -54,43 +48,33 @@ public class MeanSquaredError implements EvaluationMetric {
         return PARSER.apply(parser, null);
     }
 
-    private EvaluationMetricResult result;
+    public MeanSquaredError(StreamInput in) {
 
-    public MeanSquaredError(StreamInput in) {}
+    }
 
-    public MeanSquaredError() {}
+    public MeanSquaredError() {
+
+    }
 
     @Override
-    public String getName() {
+    public String getMetricName() {
         return NAME.getPreferredName();
     }
 
     @Override
-    public Tuple<List<AggregationBuilder>, List<PipelineAggregationBuilder>> aggs(EvaluationParameters parameters,
-                                                                                  String actualField,
-                                                                                  String predictedField) {
-        if (result != null) {
-            return Tuple.tuple(List.of(), List.of());
-        }
-        return Tuple.tuple(
-            List.of(AggregationBuilders.avg(AGG_NAME).script(new Script(buildScript(actualField, predictedField)))),
-            List.of());
+    public List<AggregationBuilder> aggs(String actualField, String predictedField) {
+        return Collections.singletonList(AggregationBuilders.avg(AGG_NAME).script(new Script(buildScript(actualField, predictedField))));
     }
 
     @Override
-    public void process(Aggregations aggs) {
+    public EvaluationMetricResult evaluate(Aggregations aggs) {
         NumericMetricsAggregation.SingleValue value = aggs.get(AGG_NAME);
-        result = value == null ? new Result(0.0) : new Result(value.value());
-    }
-
-    @Override
-    public Optional<EvaluationMetricResult> getResult() {
-        return Optional.ofNullable(result);
+        return value == null ? new Result(0.0) : new Result(value.value());
     }
 
     @Override
     public String getWriteableName() {
-        return registeredMetricName(Regression.NAME, NAME);
+        return NAME.getPreferredName();
     }
 
     @Override
@@ -133,11 +117,11 @@ public class MeanSquaredError implements EvaluationMetric {
 
         @Override
         public String getWriteableName() {
-            return registeredMetricName(Regression.NAME, NAME);
+            return NAME.getPreferredName();
         }
 
         @Override
-        public String getMetricName() {
+        public String getName() {
             return NAME.getPreferredName();
         }
 
